<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">CCNAQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name :</string>
    <string name="password">Password:</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="byclicking">By clicking sign up,you ackledge that you agree to</string>
    <string name="termsandprivacy">the Mobile Terms and Privacy</string>
    <string name="sampleusername">Sample User Name</string>
    <string name="firstnamelastname">first name last name</string>
    <string name="sampleemail">user@host.com</string>
    <string name="samplephone">+65 4865 3478</string>
    <string name="sampledateofbirth">DD/MM/YYYY</string>
    <string name="previous"><![CDATA[<<]]></string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="submit">submit</string>
    <string name="Congratulations">Congratulations!</string>
    <string name="trialquizzfinish">You have finished the trial quizz.</string>
    <string name="buy">Proceed to pay with Paypal.</string>
    <string name="buyMsg">PayPal securely processes payments for Cisco
    You can pay using PayPal account or if you dont have one
    you can pay as a PayPal guest</string>
    <string name="paypalbutton">Log in to your account to pay now!</string>
    <string name="paypalguest">PayPal Guest</string>
    <string name="country">Country</string>
    <string name="cardno">Card Number</string>
    <string name="paymenttype">Payment Type</string>
    <string name="expirydate">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="billingaddress">BillingAddress</string>
    <string name="postalcode">Postal Code</string>

</resources>
