<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:text="@string/buy"
            android:textSize="@dimen/titletextsize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyMsg"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paypalbutton"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paypalguest"
                android:id="@+id/textView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/country"
                 />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cardno"
                android:id="@+id/textView" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/cardno"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/paymenttype"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/paymenttype"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/expirydate"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/expiryDate"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cvv"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/cvv"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/lastname"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/firstname"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/billingaddress"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/billingaddress"
                />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/postalcode"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/postalcode"
                />
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>